--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 /* Reset básico */
 * {
   margin: 0;
@@ -257,4 +258,45 @@ footer {
   .nav-active {
     display: flex;
   }
+}
+
+/* Estilos para o Modal do Email */
+.modal {
+  display: none; /* Oculto por padrão */
+  position: fixed;
+  z-index: 100; /* Fica acima de outros elementos */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7); /* Fundo semitransparente */
+}
+
+.modal-content {
+  background-color: #1e1e1e;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #444;
+  width: 80%;
+  max-width: 400px;
+  color: #ccc;
+  border-radius: 8px;
+  text-align: center;
+  position: relative;
+}
+
+.modal-content .close {
+  color: #aaa;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.modal-content .close:hover,
+.modal-content .close:focus {
+  color: #fff;
 }
